<resources>
    <string name="app_name">DrawerNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_1">ini menu 1</string>
    <string name="menu_2">ini menu 2</string>
    <string name="menu_3">ini menu 3</string>
    <string name="web1">ini web services 1</string>
    <string name="web2">ini web services 2</string>

    <string name="home_second">Home Second</string>
    <string name="No">no</string>
    <string name="Name">name</string>
    <string name="Position">Position</string>
    <string name="birth_date">Birth Date</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
</resources>
